--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -27,6 +27,9 @@
                                  'color', 'fontSize', 'align', 'html'],
                                  imageDefaultDisplay: 'inline',
                                  imageDefaultAlign: 'right',
+                                 imageDefaultWidth: 100,
+                                 videoDefaultDisplay: 'inline',
+                                 videoDefaultAlign: 'left',
                                  charCounterCount: false,
                                  language: 'he', heightMin: 400, heightMax: 400}">
                     </froala-editor>
