--- a/src/home/home.html
+++ b/src/home/home.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
         <div class="col-md-6 panel-stories">
-            <h2>
+            <h2 style="margin-top:0;">
                 ${'home.sample-stories' | t}
                 <span style="float:left;font-size:80%;color:gray;direction:rtl;cursor:pointer;" click.delegate="goto_full_collection()">
                     ${'home.full-collection' | t} 
@@ -37,10 +37,13 @@
             </ul>
         </div>
         <div class="col-md-3 panel-messages">
-            <h2>${'home.messages' | t}</h2>
-            <ul>
-                <li repeat.for="msg of message_list" dir="rtl">
-                    <span style="text-align:right;float:right;">${msg.name}</span>
+            <h2 style="margin:0;">${'home.messages' | t}
+                <span class="is-link" style="float:left" if.bind="user.editing" click.delegate="add_message()"><i class="fa fa-plus-square-o"></i></span>
+            </h2>
+            <ul style="padding:0;float:right;height:250px;overflow:auto;">
+                <li repeat.for="msg of message_list" dir="rtl" >
+                    <editable story.bind="msg"></editable>
+                    <!--<span style="text-align:right;float:right;">${msg.name}</span>-->
                 </li>
             </ul>
         </div>
