--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="center-block">
-        <nav class="navbar navbar-default navbar-fixed-top navbar-centered sb-navbar" role="navigation" stylexxx="width:1200px;">
+        <nav class="navbar navbar-default navbar-fixed-top navbar-centered sb-navbar" role="navigation">
           <div class="navbar-header navbar-right" style="margin-left: 40px;">
             <a class="navbar-brand" href="#">
               <span style="font-size:150%">
@@ -15,7 +15,7 @@
             </a>
           </div>
 
-          <div class="collapse navbar-collapse" id="skeleton-navigation-navbar-collapse">
+          <div class="collapse navbar-collapse top-head" id="skeleton-navigation-navbar-collapse">
             <ul class="nav navbar-nav navbar-right" style="font-size:150%">
               <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
                 <a data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse.in" href.bind="row.href">${row.title & t}</a>
