--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -31,7 +31,7 @@
                         style="width:65px;float:right;min-height:88px;font-size:9px;vertical-align: text-bottom;">
 
                         <a click.trigger="select(member)" style="vertical-align: text-bottom;align-content: center;" aubs-tooltip="text.bind:member.name">
-                            <img style="width:50px;height:50px;border-radius:50%;" src.bind="member.facePhotoURL" aubs-tooltip="text.bind:member.name" />
+                            <img style="width:50px;height:50px;border-radius:50%;" src.bind="member.facePhotoURL" />
                             <h6 dir="rtl" class="list-group-item-heading" style="text-align: center;">${member.name}</h6>
                     </a>
                     </li>
