--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
             </a>
           </div>
 
-          <div class="collapse navbar-collapse top-head" id="skeleton-navigation-navbar-collapse">
+          <div class="collapse navbar-collapse" id="skeleton-navigation-navbar-collapse">
             <ul class="nav navbar-nav navbar-right" style="font-size:150%">
               <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
                 <a data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse.in" href.bind="row.href">${row.title & t}</a>
