partial dates. more.

--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -70,7 +70,7 @@
                     <input type="text" class="form-control" id="date_of_death" t="[placeholder]members.date-of-death" value.bind="member.member_info.date_of_death_str">
                 </div>
                 <div class="form-group" style="margin-top:10px;">
-                    <partial-date></partial-date>
+                    <partial-date date_str.two-way="member.member_info.date_of_death_str"></partial-date>
                 </div>
             </div>
             <!--The right wing of the form-->
