--- a/src/resources/elements/roller.html
+++ b/src/resources/elements/roller.html
@@ -2,11 +2,11 @@
     <require from="./roller.css"></require>
     <div class="roller" css="width:${width}px;">
         <div class="top" css="left:${left}px;">
-            <i class="fa fa-xs fa-play fa-rotate-270" click.trigger="shift(1)" ></i>
+            <i class="fa fa-play fa-rotate-270" click.trigger="shift(1)" ></i>
         </div>
-        <input type="text" value="${current}" css="width:${width}px;" />
-        <div class="bottom"  css="left:${left}px;">
-            <i class="fa fa-xs fa-play fa-rotate-90" click.trigger="shift(-1)"></i>
+        <input type="text" value.two-way="current" css="width:${width}px;" />
+        <div class="bottom" css="left:${left}px;">
+            <i class="fa fa-play fa-rotate-90" click.trigger="shift(-1)"></i>
         </div>
     </div>
 
