--- a/src/resources/elements/partial-date.html
+++ b/src/resources/elements/partial-date.html
@@ -1,25 +1,25 @@
 <template>
     <form class="form-inline" dir="rtl">
         <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.bind="centuries" current="19" width="28"></roller>
-        </div>
-        <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.bind="decades" current="2" width="16"></roller>
-        </div>
-        <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.bind="years" current="8" width="16"></roller>
+            <roller option_list.one-time="days" current.two-way="day" width="28"></roller>
         </div>
         <div class="form-group" style="float:left;margin-right:0px;">
             <label>-</label>
         </div>
         <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.bind="months" current="07" width="28"></roller>
+            <roller option_list.one-time="months" current.two-way="month" width="28"></roller>
         </div>
         <div class="form-group" style="float:left;margin-right:0px;">
             <label>-</label>
         </div>
         <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.bind="days" current="17" width="28"></roller>
+            <roller option_list.one-time="centuries" current.two-way="century" width="28"></roller>
+        </div>
+        <div class="form-group" style="float:left;margin-right:0px;">
+            <roller option_list.one-time="decades" current.two-way="decade" width="16"></roller>
+        </div>
+        <div class="form-group" style="float:left;margin-right:0px;">
+            <roller option_list.one-time="years" current.two-way="year" width="16"></roller>
         </div>
     </form>
 </template>
