--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -66,11 +66,14 @@
                 <div class="form-group">
                     <input type="text" class="form-control" id="birth_place" t="[placeholder]members.birth-place" value.bind="member.member_info.PlaceOfBirth">
                 </div>
-                <div class="form-group">
+                <!--div class="form-group">
                     <input type="text" class="form-control" id="date_of_death" t="[placeholder]members.date-of-death" value.bind="member.member_info.date_of_death_str">
-                </div>
+                </div-->
                 <div class="form-group" style="margin-top:10px;">
-                    <partial-date date_str.two-way="member.member_info.date_of_death_str"></partial-date>
+                    <div class="col-md-6" style="padding-left:0;">
+                        <partial-date date_str.two-way="member.member_info.date_of_death_str" id="date-of-death"></partial-date>
+                    </div>
+                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-death">${'members.date-of-death' | t}:</label>
                 </div>
             </div>
             <!--The right wing of the form-->
@@ -88,8 +91,14 @@
                 <div class="form-group">
                     <input type="text" class="form-control" id="DateOfBirth" disabled.bind="true" value.bind="member.member_info.DateOfBirth">
                 </div>
-                <div class="form-group">
+                <!--div class="form-group">
                     <input type="text" class="form-control" id="date_of_birth" t="[placeholder]members.date-of-birth" value.bind="member.member_info.date_of_birth_str">
+                </div-->
+                <div class="form-group" style="margin-top:10px;">
+                    <div class="col-md-6" style="padding-left:0;">
+                        <partial-date date_str.two-way="member.member_info.date_of_birth_str" id="date-of-birth"></partial-date>
+                    </div>
+                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-birth">${'members.date-of-birth' | t}:</label>
                 </div>
                 <div class="form-group">
                     <input type="text" class="form-control" id="nick_name" t="[placeholder]members.nick-name" value.bind="member.member_info.NickName">
