--- a/src/resources/elements/partial-date.html
+++ b/src/resources/elements/partial-date.html
@@ -1,25 +1,25 @@
 <template>
-    <form class="form-inline" dir="rtl">
-        <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.one-time="days" current.two-way="day" width="28"></roller>
+    <form class="form-inline" dir="ltr">
+        <div id="day" class="form-group day" style="float:left;margin-right:0px;" >
+            <roller option_list.one-time="days" current.two-way="day" maxlen="2"></roller>
         </div>
         <div class="form-group" style="float:left;margin-right:0px;">
             <label>-</label>
         </div>
-        <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.one-time="months" current.two-way="month" width="28"></roller>
+        <div id="month" class="form-group month" style="float:left;margin-right:0px;">
+            <roller option_list.one-time="months" current.two-way="month" maxlen="2"></roller>
         </div>
         <div class="form-group" style="float:left;margin-right:0px;">
             <label>-</label>
         </div>
-        <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.one-time="centuries" current.two-way="century" width="28"></roller>
+        <div id="century" class="form-group century" style="float:left;margin-right:0px;">
+            <roller option_list.one-time="centuries" current.two-way="century" maxlen="2"></roller>
         </div>
-        <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.one-time="decades" current.two-way="decade" width="16"></roller>
+        <div id="decade" class="form-group decade" style="float:left;margin-right:0px;">
+            <roller option_list.one-time="decades" current.two-way="decade" maxlen="1"></roller>
         </div>
-        <div class="form-group" style="float:left;margin-right:0px;">
-            <roller option_list.one-time="years" current.two-way="year" width="16"></roller>
+        <div id="year" class="form-group year" style="float:left;margin-right:0px;" onfocus="onfocus('year')" `>
+            <roller option_list.one-time="years" current.two-way="year" maxlen="1"></roller>
         </div>
     </form>
 </template>
