--- a/src/resources/elements/roller.html
+++ b/src/resources/elements/roller.html
@@ -4,7 +4,7 @@
         <div class="top" css="left:${left}px;">
             <i class="fa fa-play fa-rotate-270" click.trigger="shift(1)" ></i>
         </div>
-        <input type="text" value.two-way="current" css="width:${width}px;" />
+        <input onfocus="this.select()" type="text" value.two-way="current" css="width:${width}px;" maxlength="${maxlen}" />
         <div class="bottom" css="left:${left}px;">
             <i class="fa fa-play fa-rotate-90" click.trigger="shift(-1)"></i>
         </div>
