--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -8,6 +8,7 @@
         </div>
         <div class="row content-area" style="height:300px;width:100%;margin-top:20px;" dir="rtl">
             <div class="row">
+                <div class="col-md-1"></div>
                 <div class="col-md-9">
                     <div class="row" style="margin-bottom:15px;">
                         <div class="col-md-5 col-md-offset-7">
@@ -18,11 +19,14 @@
                         </div>
                     </div>
                     <ul style="padding:0;float:right;height:560px;overflow:auto;list-style-type: none;">
-                        <li repeat.for="story of story_list" dir="rtl" style="float:right;">
+                        <li repeat.for="story of story_list" dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:12px;">
                             <div style="height:130px;overflow:hidden;padding:20px;">
-                                <div style="margin-bottom: 10px;border-bottom:2px solid lightgray;">
+                                <div style="margin-bottom: 10px;"> <!--border-bottom:2px solid lightgray;"-->
                                     <editable story.bind="story"></editable>
                                 </div>
+                                <!--div style="border-bottom:2px solid lightgray;height:24px;margin-bottom:15px;">
+                                    <a style="float-left">For the whole story</a>
+                                    </div>-->
                             </div>
                         </li>
                     </ul>
