--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -12,22 +12,24 @@
                 <div class="col-md-9">
                     <div class="row" style="margin-bottom:15px;">
                         <div class="col-md-5 col-md-offset-7">
-                            <div class="input-group" style="width:100%;margin-top:15px;margin-right:-16px;">
+                            <div class="input-group" style="width:100%;margin-top:15px;margin-right:35px;">
                                 <input dir="rtl" type="search" class="form-control" t="[placeholder]stories.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce"
                                     change.delegate="update_story_list()" />
                             </div>
                         </div>
                     </div>
                     <ul style="padding:0;float:right;height:560px;overflow:auto;list-style-type: none;">
-                        <li repeat.for="story of story_list" dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:12px;">
+                        <li repeat.for="story of story_list" dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;">
                             <div style="height:130px;overflow:hidden;padding:20px;">
                                 <div style="margin-bottom: 10px;"> <!--border-bottom:2px solid lightgray;"-->
                                     <editable story.bind="story"></editable>
+                                   
                                 </div>
                                 <!--div style="border-bottom:2px solid lightgray;height:24px;margin-bottom:15px;">
                                     <a style="float-left">For the whole story</a>
                                     </div>-->
-                            </div>
+                            </div> 
+                            <a click.delegate="jump_to_the_full_story(story)" style="position:absolute;top:132px;left:20px;cursor:pointer;">${'stories.to-the-full-story' | t }...</a>
                         </li>
                     </ul>
 
