wip. story-detail page.

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -7,7 +7,7 @@
             <span if.bind="user.privileges.DEVELOPER">${member.member_info.id}</span>
             </h3>
         </div>
-        <photo-strip slides.bind="slides" source.bind="source" height.bind="220" id.bind="member.member_info.id" action_key="Zoom"
+        <photo-strip source.bind="source" height.bind="220" id.bind="member.member_info.id" action_key="Zoom"
             settings.bind="{arrows:true, height:220}"></photo-strip>
         <div>
             <div class="row content-area" style="min-height:280px;width:1170px;border-bottom: solid 3px gray;margin: 0;" dir="rtl">
