--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -1,15 +1,17 @@
 <template>
 
-    <div class="fr-view" style="margin-top:10px;margin-right:0;margin-left:0;padding:0;">
-        <span show.bind="story.name" dir="rtl" style="padding:0;margin:0;float:right;">
-            <i class="fa fa-sm fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story, 'show')">&nbsp;&nbsp;</i>
-            <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
-            ${story.timestamp} | ${story.author}
-        </span>
-        <div class="story-panel">
-            <p style="float:right";>
-                <strong style="float:right">${story.name}:</strong>&nbsp;
-                <span style="float:right" dir="rtl" innerhtml.bind="story.story_text "></span>
+    <div css="margin-top:10px;margin-right:0;margin-left:0;padding:0;width:${width}">
+        <div class="row">
+            <span show.bind="story.name" dir="rtl" style="padding:0;margin:0;float:right;">
+                <i class="fa fa-sm fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story, 'show')">&nbsp;&nbsp;</i>
+                <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
+            <span if.bind="settings.show_date &&story.timestamp">${story.timestamp} | </span>
+            <span if.bind="story.author">${story.author}: </span>
+        </div>
+        <div class="row" stylex="padding:0;"><strong style="float:right">${story.name}</strong></div>
+
+        <div class="fr-view row ${settings.class}">
+            <p innerhtml.bind="story.story_text" css="float:right;direction:rtl" ;>
             </p>
         </div>
     </div>
