--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -30,6 +30,7 @@
                                  imageDefaultWidth: 100,
                                  videoDefaultDisplay: 'inline',
                                  videoDefaultAlign: 'left',
+                                 VideoDefaultWidth: 160,
                                  charCounterCount: false,
                                  language: 'he', heightMin: 400, heightMax: 400}">
                     </froala-editor>
