--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -1,35 +1,43 @@
-<template>
+<template class="multi-select">
     <div class="input-group search-filter" style="width:100%;margin-top:15px;">
         <input dir="rtl" type="search" class="form-control" t="[placeholder]${place_holder_text}" value.bind="filter & debounce">
     </div>
-    <div class="row" style="max-height: 100px;overflow:auto;margin-left:18px;margin-right:-36px;">
-        <ul class="list-group" style="list-style-type:none">
-            <li repeat.for="option of selected_options" class="selected">
+    <div class="row options" style="max-height: 100px;overflow:auto;margin-left:18px;margin-right:-36px;border-bottom:2px solid lightgray;">
+        <ul class="list-group" css="width:${width}px;list-style-type:none">
+            <li repeat.for="option of selected_options" class="selected" css="width:${width}px;">
                 <a click.trigger="toggle_selection(option)">${option.name} </a>
             </li>
         </ul>
     </div>
-    <div class="row" style="max-height: 130px;overflow:auto;margin-left:18px;margin-right:-36px;">
-        <ul class="list-group" style="list-style-type:none" if.bind="true || unselected_options===[]">
+    <div class="row options" style="max-height: 130px;overflow:auto;margin-left:18px;margin-right:-36px;" if.bind="options && options.length > 0">
+        <ul class="list-group" css="list-style-type:none;width:${width}px;" if.bind="true || unselected_options===[]">
             <li repeat.for="option of options | filter: filter : 9999 : 'name'" if.bind="! is_selected(option)">
-                <a click.trigger="toggle_selection(option)">${option.name} </a>
+                <div class="option-item" css="margin:0;padding:0;width:${width}px">
+                    <a click.trigger="toggle_selection(option)">${option.name} </a>
+                </div>
             </li>
         </ul>
     </div>
 
     <style>
-        .selected {
+        .multi-select .selected {
             font-weight: bolder;
         }
 
-        div.search-filter input {
+        .multi-select div.search-filter input {
             font-size: 14px;
             height: 32px;
             width: 90%;
             float: right;
             padding: 5px;
         }
+        .multi-select div.option-item {
+            margin-left: 0;
+            padding: 0;
+        }
+        
     </style>
+
 
 
 </template>
