--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -30,9 +30,9 @@
                     </div>
                 </div>
                 <div class="col-md-2">
-                    <div class="row" style="font-size:28px;">
+                 <!--   <div class="row" style="font-size:28px;">
                         ${'topics' | t}
-                    </div>
+                    </div>-->
                     <div class="row">
                         <multi-select options.bind="topic_list" place_holder_text="photos.click-topic" change.delegate="handle_topic_change($event) "></multi-select>
                     </div>
