--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -1,23 +1,26 @@
 <template class="multi-select">
-    <require from="./multi-select.css"><</require>
+    <require from="./multi-select.css">
+    </require>
     <div class="input-group search-filter" style="width:100%;margin-top:15px;">
         <input dir="rtl" type="search" class="form-control" t="[placeholder]${place_holder_text}" value.bind="filter & debounce">
     </div>
-    <div class="row options" style="max-height: 100px;overflow:auto;margin-left:18px;margin-right:-36px;border-bottom:2px solid lightgray;">
-        <ul class="list-group" css="width:${width}px;list-style-type:none">
-            <li repeat.for="option of selected_options" class="selected" css="width:${width}px;">
-                <a click.trigger="toggle_selection(option)">${option.name} </a>
-            </li>
-        </ul>
-    </div>
-    <div class="row options" style="max-height: 130px;overflow:auto;margin-left:18px;margin-right:-36px;" if.bind="options && options.length > 0">
-        <ul class="list-group" css="list-style-type:none;width:${width}px;" if.bind="true || unselected_options===[]">
-            <li repeat.for="option of options | filter: filter : 9999 : 'name'" if.bind="! is_selected(option)">
-                <div class="option-item" css="margin:0;padding:0;width:${width}px">
-                    <a click.trigger="toggle_selection(option)">${option.name} </a>
-                </div>
-            </li>
-        </ul>
+    <div class="ms-container" css="height:${height}px;">
+        <div class="row options selected" css="max-height:${height_selected}px;">
+            <ul class="list-group" css="width:${width}px;list-style-type:none">
+                <li repeat.for="option of selected_options" class="selected" css="width:${width-20}px;">
+                    <a click.trigger="toggle_selection(option)">${option.name} </a><i class="fa fa-paperclip" style="float:left"></i>
+                </li>
+            </ul>
+        </div>
+        <div class="row options unselected" css="max-height:${height_unselected}px;" if.bind="options && options.length > 0">
+            <ul class="list-group" css="list-style-type:none;width:${width}px;" if.bind="true || unselected_options===[]">
+                <li repeat.for="option of options | filter: filter : 9999 : 'name'" if.bind="! is_selected(option)">
+                    <div class="option-item" css="margin:0;padding:0;width:${width-20}px">
+                        <a click.trigger="toggle_selection(option)">${option.name} </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 
 </template>
