--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -1,19 +1,24 @@
 <template class="multi-select">
     <require from="./multi-select.css">
     </require>
-    <div class="input-group search-filter" style="width:100%;margin-top:15px;">
+    <div class="input-group search-filter">
         <input dir="rtl" type="search" class="form-control" t="[placeholder]${place_holder_text}" value.bind="filter & debounce">
     </div>
     <div class="ms-container" css="height:${height}px;">
         <div class="row options selected" css="max-height:${height_selected}px;">
-            <ul class="list-group" css="width:${width}px;list-style-type:none">
+            <ul class="list-group" css="width:${width}px;">
                 <li repeat.for="option of selected_options" class="selected" css="width:${width-20}px;">
-                    <a click.trigger="toggle_selection(option)">${option.name} </a><i class="fa fa-paperclip" style="float:left"></i>
+                    <div class="option-item" css="margin:0;padding:0;width:${width-20}px">
+                        <a click.trigger="toggle_selection(option)">${option.name} </a>
+                        <i class="fa fa-paperclip fa-rotate-90 tool" click.trigger="merge_options(option, $event)"></i>
+                        <i if.bind="user.editing" class="fa fa-pencil tool" click.trigger="edit_option(option, $event)"></i>
+                        <i if.bind="user.editing" class="fa fa-trash tool" click.trigger="remove_option(option, $event)"></i>
+                    </div>
                 </li>
             </ul>
         </div>
         <div class="row options unselected" css="max-height:${height_unselected}px;" if.bind="options && options.length > 0">
-            <ul class="list-group" css="list-style-type:none;width:${width}px;" if.bind="true || unselected_options===[]">
+            <ul class="list-group" css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 9999 : 'name'" if.bind="! is_selected(option)">
                     <div class="option-item" css="margin:0;padding:0;width:${width-20}px">
                         <a click.trigger="toggle_selection(option)">${option.name} </a>
