--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -10,10 +10,18 @@
             <div class="row">
                 <div class="col-md-1">
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;">
-                        <div class="col-md-5 col-md-offset-7">
-                            <div class="input-group" style="width:100%;margin-top:15px;margin-right:35px;">
+
+                        <div class="col-md-1 col-md-offset-6" if.bind="user.editing" style="padding-top:18px;">
+                            <a route-href="route: story-detail; params.bind: {id:'new'}" class="btn btn-success cl-create-btn">
+                                <i class="fa fa-plus-square-o"></i>
+                                ${'stories.new' & t}
+                            </a>
+                        </div>
+                        <div class="col-md-1 col-md-offset-6" if.bind="!user.editing"></div>
+                        <div class="col-md-5">
+                            <div class="input-group" style="width:90%;margin-top:15px;margin-right:35px;">
                                 <input dir="rtl" type="search" class="form-control" t="[placeholder]stories.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce"
                                     change.delegate="update_story_list()" />
                             </div>
@@ -32,7 +40,7 @@
 
 
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="row">
                         <multi-select options.bind="topic_list" place_holder_text="photos.click-topic" height="180" change.delegate="handle_topic_change($event) "></multi-select>
                     </div>
