--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -6,8 +6,18 @@
     </div>
     <div class="ms-container" css="height:${height}px;">
         <div class="row options selected" css="max-height:${height_selected}px;">
+            <!-- First  display grouped options. may be add a popover with names of all group members-->
+            <ul class="list-group grouped" css="width:${width}px;">
+                <li repeat.for="option of grouped_selected_options" class="selected" css="width:${width-20}px;">
+                    <div class="option-item" css="margin:0;padding:0;width:${width-20}px">
+                        <a click.trigger="toggle_selection(option)">${option.name} </a>
+                        <i class="fa fa-paperclip fa-rotate-90 tool" click.trigger="unmerge_options(option, $event)"></i>
+                    </div>
+                </li>
+            </ul>
+            <!-- Second come all ungrouped options -->
             <ul class="list-group" css="width:${width}px;">
-                <li repeat.for="option of selected_options" class="selected" css="width:${width-20}px;">
+                <li repeat.for="option of ungrouped_selected_options" class="selected" css="width:${width-20}px;">
                     <div class="option-item" css="margin:0;padding:0;width:${width-20}px">
                         <a click.trigger="toggle_selection(option)">${option.name} </a>
                         <i class="fa fa-paperclip fa-rotate-90 tool" click.trigger="merge_options(option, $event)"></i>
@@ -17,6 +27,7 @@
                 </li>
             </ul>
         </div>
+        <!-- Under the line come all unselected options -->
         <div class="row options unselected" css="max-height:${height_unselected}px;" if.bind="options && options.length > 0">
             <ul class="list-group" css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 9999 : 'name'" if.bind="! is_selected(option)">
