--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -11,7 +11,7 @@
                 <div class="col-md-1">
                     <input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="photos_per_line" />
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;">
                         <div class="col-md-5 col-md-offset-7">
                             <div class="input-group" style="width:100%;margin-top:15px;margin-right:-16px;">
@@ -23,13 +23,13 @@
                     <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;">
                         <a repeat.for="photo of photo_list | filter : filter : 9999 : 'title'" 
                             click.trigger="photo_clicked(photo, $event)" 
-                            aubs-tooltip="text.bind:photo.title"
+                            
                             class.bind="photo.selected">
-                            <img src="${photo.square_src}" width="${photo_size}" height="${photo_size}" style="margin:0;" />
+                            <img src="${photo.square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" height="${photo_size}" style="margin:0;" />
                         </a>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-3">
                  <!--   <div class="row" style="font-size:28px;">
                         ${'topics' | t}
                     </div>-->
