--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -7,19 +7,19 @@
     <div class="ms-container" css="height:${height}px;">
         <div class="row options selected" css="max-height:${height_selected}px;">
             <!-- First  display grouped options. may be add a popover with names of all group members-->
-            <ul if.bind="grouped_selected_options.length>0" class="list-group grouped" css="width:${width}px;">
+            <ul if.bind="grouped_selected_options.length>0" class="grouped" css="width:${width}px;">
                 <li repeat.for="option of grouped_selected_options" class="selected" css="width:${inner_width}px;">
                     <div class="option-item" css="margin:0;padding:0;width:${inner_width}px">
-                        <a click.trigger="toggle_selection(option)">${option.name} </a>
+                        <a click.trigger="toggle_selection(option)" aubs-tooltip="text.bind:option.names; position:top;class:ms-tooltip;">${option.name}</a>
                         <i class="fa fa-paperclip fa-rotate-90 tool" click.trigger="unmerge_options(option, $event)"></i>
                     </div>
                 </li>
             </ul>
             <!-- Second come all ungrouped options -->
-            <ul class="list-group" css="width:${width}px;">
+            <ul css="width:${width}px;">
                 <li repeat.for="option of ungrouped_selected_options" class="selected" css="width:${inner_width}px;">
                     <div class="option-item" css="margin:0;padding:0;width:${inner_width}px">
-                        <a click.trigger="toggle_selection(option)">${option.name} </a>
+                        <a click.trigger="toggle_selection(option)">${option.name}</a>
                         <i class="fa fa-paperclip fa-rotate-90 tool" click.trigger="merge_options(option, $event)"></i>
                         <i if.bind="user.editing" class="fa fa-pencil tool" click.trigger="edit_option(option, $event)"></i>
                         <i if.bind="user.editing" class="fa fa-trash tool" click.trigger="remove_option(option, $event)"></i>
@@ -29,10 +29,10 @@
         </div>
         <!-- Under the line come all unselected options -->
         <div class="row options unselected" css="max-height:${height_unselected}px;" if.bind="options && options.length > 0">
-            <ul class="list-group" css="width:${width}px;" if.bind="true || unselected_options===[]">
+            <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 99 : 'name'" if.bind="! is_selected(option)">
                     <div class="option-item" css="margin:0;padding:0;width:${inner_width}px">
-                        <a click.trigger="toggle_selection(option)">${option.name} </a>
+                        <a click.trigger="toggle_selection(option)">${option.name}</a>
                     </div>
                 </li>
             </ul>
