--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -20,13 +20,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;">
-                        <a repeat.for="photo of photo_list | filter : filter : 9999 : 'title'" 
-                            click.trigger="photo_clicked(photo, $event)" 
-                            
-                            class.bind="photo.selected">
-                            <img src="${photo.square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" height="${photo_size}" style="margin:0;" />
-                        </a>
+                    <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;margin:0;padding:0;">
+                        <span css="padding:0;margin:0;position:relative;width:${photo_size}px;height:${photo_size}px;" repeat.for="photo of photo_list | filter : filter : 9999 : 'title'">
+                            <a click.trigger="photo_clicked(photo, $event)" class.bind="photo.selected">
+                                <img src="${photo.square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" height="${photo_size}" style="margin:0;" />
+                            </a>
+                            <a css="position:absolute;right:0px;top:${width/2}px;cursor:sw-resize;" click.trigger="maximize_photo(photo, $event)"><i class="fa fa-expand"></i></a>
+                        </span>
                     </div>
                 </div>
                 <div class="col-md-3">
